{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Attack",
            "id": "e779a209-6566-4beb-904b-aec78faf816d",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "cade776d-8858-4577-82ae-2aa0479b540e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "818df789-f830-48ab-9ceb-689b5f0c4a50",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Capacity",
            "id": "698439f3-8087-4c51-8d99-5115fa6e1253",
            "actions": [
                {
                    "name": "Capacity0",
                    "type": "Button",
                    "id": "3dd9532a-e0fc-4369-91a1-ada3d048afb9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity1",
                    "type": "Button",
                    "id": "f0ec7891-2904-4b4a-b410-426f3efbc135",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Capacity2",
                    "type": "Button",
                    "id": "5149e613-eee6-4a62-8048-6e49faf4b9eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51ee870a-f512-42bd-87a8-5e549a2d0c34",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0c5895f-7a86-4ec0-a37d-36df2dd2f8cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9023c4ba-5907-4e90-8ea0-9568be0c0c2b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Capacity2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Movement",
            "id": "2b795710-b287-4812-ae8b-43eb8f73991b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "598f10a3-a71c-4ba7-bccd-c75ad4f936ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e33561b7-f02a-4f3c-99b3-bcb830ee5774",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6046c493-1af8-4773-b534-9edb26f34a04",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db5831e6-3bad-49c1-9063-296195b540ed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "89c756b9-e98f-4cd1-aa79-c1a0d2e5b28f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "612eafcd-da8d-4901-8258-b84b7f219246",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Camera",
            "id": "745bed8a-cfc0-4f8a-a3ae-b70cfb354251",
            "actions": [
                {
                    "name": "LockToggle",
                    "type": "Button",
                    "id": "54a45e78-fe95-4f9d-bf31-b0edcdd20b4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d00ecd55-ab7c-4100-8d0c-99e5e99eedbb",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MoveMouse",
            "id": "a7ceacff-6044-40be-a466-6447c599e434",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "101c5f66-bd62-4b89-b5fd-0dcc2376f192",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9074bc1f-6077-45bd-89cd-62bd87652634",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}